...
        setup()
    }
    
    
    private func setup(){
        
        self.title = "Cadastre-se"
        
        let signUpButton = contentView.signUpButton
        signUpButton.addTarget(self, action: #selector(createUser), for: .touchUpInside)
        
        setupContentView()
        setupKeyboardObserver(contentView: contentView)
...
